imagemagick (8:6.7.8.10-1) UNRELEASED; urgency=low

  * New upstream version
  * Improve download and commit script
  * Depend on libfftw3
  * Suggest graphviz

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Tue, 14 Aug 2012 12:59:27 +0200
  
imagemagick (8:6.7.7.10-3) unstable; urgency=high

  * Bug fix: "CVE-2012-3437", ImageMagick: Magick_png_malloc() size 
    argument thanks to Moritz Muehlenhoff (Closes: #683285).

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Mon, 30 Jul 2012 22:47:47 +0200

imagemagick (8:6.7.7.10-2) unstable; urgency=low

  * Really solve the upgrade problem (Closes: #679188, #679063).
  * Build-depend on debhelper >= 9~

 -- Vincent Fourmond <fourmond@debian.org>  Fri, 29 Jun 2012 23:18:39 +0200

imagemagick (8:6.7.7.10-1) unstable; urgency=low

  * Bug fix: "fails to upgrade from wheezy - trying to overwrite
    /usr/lib/x86_64-linux-gnu/ImageMagick-6.7.7/modules-Q16/coders/pango.so",
    thanks to Andreas Beckmann (Closes: #679188 and Closes: #679063).
  * New upstream version:
  - Fix FTBS on arm (closes: #679430). 
  - drop previous patch queue (merged upstream).
  - Fix pointer size missmatch.
  - Document feature: "SVG displayed in wrong size", thanks to Marc-Jano Knopp
    (Closes: #632526).

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Thu, 28 Jun 2012 17:44:21 +0200

imagemagick (8:6.7.7.9-1) unstable; urgency=low
  [ Bastien Roucariès ]
   
  * New upstream version
  * Bug fix: "Menu entry of imagemagick does not launch it", thanks to
    Michael Biebl (Closes: #675453). 
  * Bug fix: "Please include large 256x256px icon", thanks to Ralph
    Aichinger (Closes: #675484). Add scalable icons, 16x16, 32x32, 48x48
  * Copyright review:
  - move to dep5 format.
  - Remove dot support due to incompatibility between EPL and GPL 
    (Closes: #677413).
  - Remove non modifiable sRGB.icc (Closes: #677414).
  * Add automation script for source download and git machinery